--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.8
   url_launcher: ^6.2.6
+  cloud_firestore: ^4.15.5
+  intl: ^0.18.0
+  fluttertoast: ^8.2.5
 
 
 dev_dependencies:
