--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   cloud_firestore: ^4.15.5
   intl: ^0.18.0
   fluttertoast: ^8.2.5
+  url_launcher: ^6.2.6
+  smooth_page_indicator: ^1.1.0
 
 
 dev_dependencies:
