--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shared_preferences: ^2.0.8
 
   carousel_slider: ^4.2.1
+  flutter_local_notifications: ^17.1.2
 
   fluttertoast: ^8.2.5
   url_launcher: ^6.2.6
