--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
     id 'com.google.gms.google-services' version '4.4.1' apply false
-
 }
 
 def localProperties = new Properties()
@@ -26,10 +25,9 @@ if (flutterVersionName == null) {
 
 apply plugin: 'com.google.gms.google-services'
 
-
 android {
     namespace "com.example.proj_app"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -46,12 +44,9 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.proj_app"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 20
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
@@ -59,8 +54,6 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
     }
@@ -71,6 +64,6 @@ flutter {
 }
 
 dependencies {
-    //  implementation platform('com.google.firebase:firebase-bom:32.7.4')
-    //  implementation 'com.andriod.support:multidex:1.0.3'
+    implementation platform('com.google.firebase:firebase-bom:32.7.4')
+    implementation 'com.android.support:multidex:1.0.3'
 }
