--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   fluttertoast: ^8.2.5
   url_launcher: ^6.2.6
   smooth_page_indicator: ^1.1.0
+  qr_code_scanner: ^1.0.1 # Use the latest version
 
 
 dev_dependencies:
